<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/settings"
            app:titleTextColor="?attr/colorOnPrimary"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_title"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"/>

    <RadioGroup
        android:id="@+id/theme_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_title"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_auto" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>